--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "astro": "^5.9.2",
-    "sass": "1.77.5"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "sass": "1.77.5",
+    "usehooks-ts": "^3.1.1"
   }
 }
