--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "astro": "^5.9.2",
+    "bootstrap": "^5.3.6",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "sass": "1.77.5",
     "usehooks-ts": "^3.1.1"
